<resources>
    <string name="app_name">LibreCBT</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="no_diary_entries">Вы пока еще ничего не записали в дневник</string>
    <string name="diary_error">Что-то пошло не так…</string>

    <string name="diary_event">Событие:</string>
    <string name="diary_thoughts">Мысли:</string>
    <string name="diary_emotions">Эмоции:</string>
    <string name="diary_reaction">Реакция:</string>
    <string name="diary_cognitive_distortion">Когнитивное искажение:</string>
    <string name="diary_intensity">Интенсивность:</string>
    <string name="diary_rational_answer">Рациональный ответ:</string>
    <string name="diary_time">Время:</string>
</resources>