<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diary_event" />

        <TextView
            android:id="@+id/diaryEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diary_event" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/diary_thoughts" />

        <TextView
            android:id="@+id/diaryThoughts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diary_thoughts" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/diary_emotions" />

        <TextView
            android:id="@+id/diaryEmotions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diary_emotions" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/diary_reaction" />

        <TextView
            android:id="@+id/diaryReaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diary_reaction" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/diary_cognitive_distortion" />

        <TextView
            android:id="@+id/diaryCognitiveDistortion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diary_cognitive_distortion" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/diary_intensity" />

        <TextView
            android:id="@+id/diaryIntensity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diary_intensity" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/diary_rational_answer" />

        <TextView
            android:id="@+id/diaryRationalAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diary_rational_answer" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/diary_time" />

        <TextView
            android:id="@+id/diaryTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diary_time" />
    </LinearLayout>
</androidx.cardview.widget.CardView>